[gd_scene load_steps=9 format=4 uid="uid://cdu7b0q7731gb"]

[ext_resource type="Script" uid="uid://beae411h3ly3q" path="res://Main_Game/2Player/stage_controller.gd" id="1_v8yvg"]
[ext_resource type="PackedScene" uid="uid://bfsd75ne6drno" path="res://Main_Game/stageElements/Damage_Tilemap.tscn" id="2_kb3f5"]
[ext_resource type="PackedScene" uid="uid://bpfr4nng2lm37" path="res://Main_Game/2Player/player1.tscn" id="2_v8yvg"]
[ext_resource type="PackedScene" uid="uid://scl3b7ko3tw4" path="res://Main_Game/stageElements/Terrain_Tilemap.tscn" id="3_a3gg2"]
[ext_resource type="PackedScene" uid="uid://b8asnrpev842c" path="res://Main_Game/stageElements/checkpoint.tscn" id="4_eefhg"]
[ext_resource type="PackedScene" uid="uid://ba7k7ce0gunl1" path="res://Main_Game/2Player/player2.tscn" id="5_kgcny"]
[ext_resource type="PackedScene" uid="uid://bsii2bg3dsoji" path="res://Main_Game/pausemenu.tscn" id="6_a3gg2"]
[ext_resource type="PackedScene" uid="uid://4n7aivnwu15g" path="res://Main_Game/hud.tscn" id="8_kgcny"]

[node name="Stage0" type="Node"]
script = ExtResource("1_v8yvg")

[node name="Damage" parent="." instance=ExtResource("2_kb3f5")]
modulate = Color(1, 1, 1, 0.5)

[node name="Back" parent="." instance=ExtResource("3_a3gg2")]

[node name="Terrain" parent="." instance=ExtResource("3_a3gg2")]
tile_map_data = PackedByteArray("AAD7/wQAAQASAAAAAAD8/wQAAQATAAAAAAD9/wQAAQATAAAAAAD+/wQAAQATAAAAAAD//wQAAQATAAAAAAAAAAQAAQATAAAAAAABAAQAAQATAAAAAAACAAQAAQATAAAAAAADAAQAAQATAAAAAAAEAAQAAQATAAAAAAAFAAQAAQATAAAAAAAGAAQAAQATAAAAAAAHAAQAAQATAAAAAAAIAAQAAQATAAAAAAAKAAQAAQAUAAAAAAAJAAQAAQAUAAAAAAA=")

[node name="End" parent="." instance=ExtResource("4_eefhg")]
position = Vector2(384, -32)

[node name="Checkpoints" type="Node" parent="."]

[node name="0" parent="Checkpoints" instance=ExtResource("4_eefhg")]
position = Vector2(-224, -32)

[node name="Player2" parent="." instance=ExtResource("5_kgcny")]
position = Vector2(-128, 96)

[node name="Player1" parent="." instance=ExtResource("2_v8yvg")]
collision_layer = 2
collision_mask = 2

[node name="Camera" type="Camera2D" parent="."]
scale = Vector2(2, 2)

[node name="Pause Menu" parent="Camera" instance=ExtResource("6_a3gg2")]
visible = false

[node name="HUD" parent="Camera" instance=ExtResource("8_kgcny")]

[node name="Fore" parent="." instance=ExtResource("3_a3gg2")]

[node name="Player2Spawn" type="Marker2D" parent="."]
position = Vector2(-128, 96)

[node name="Player1Spawn" type="Marker2D" parent="."]
position = Vector2(-128, 96)

[node name="Score Timer" type="Timer" parent="."]

[connection signal="beatStage" from="Player2" to="." method="stageWon" binds= [2]]
[connection signal="hitArea" from="Player2" to="." method="_on_player_2_hit_area"]
[connection signal="respawn" from="Player2" to="." method="_on_player_2_respawn"]
[connection signal="beatStage" from="Player1" to="." method="stageWon" binds= [1]]
[connection signal="hitArea" from="Player1" to="." method="_on_player_1_hit_area"]
[connection signal="respawn" from="Player1" to="." method="_on_player_1_respawn"]
